updated git workflow

--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -17,7 +17,7 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    environment: AWS-ECR
+    environment: AWS
 
     steps:
       - name: Checkout Code
