--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -12,7 +12,6 @@ env:
   AWS_REGION: us-east-1
   IMAGE_TAG: latest
   ECR_REGISTRY: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
-  SERVICE_NAME: node-microservices-apigateway
 
 jobs:
   build-and-push:
@@ -35,13 +34,54 @@ jobs:
 
       - name: Login to Amazon ECR
         run: |
-           aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
+          aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.ECR_REGISTRY }}
 
-      - name: Build and Push Docker Image(API Gateway)
+      # Build & Push API Gateway
+      - name: Build and Push Docker Image (API Gateway)
         uses: docker/build-push-action@v5
         with:
           context: ./api-gateway
           push: true
           tags: |
-            ${{ env.ECR_REGISTRY }}/${{ env.SERVICE_NAME }}:${{ github.sha }}
-            ${{ env.ECR_REGISTRY }}/${{ env.SERVICE_NAME }}:latest
+            ${{ env.ECR_REGISTRY }}/node-microservices-apigateway:${{ github.sha }}
+            ${{ env.ECR_REGISTRY }}/node-microservices-apigateway:latest
+
+      # Build & Push Identity Service
+      - name: Build and Push Docker Image (Identity Service)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./identity-service
+          push: true
+          tags: |
+            ${{ env.ECR_REGISTRY }}/node-microservices-identity_service:${{ github.sha }}
+            ${{ env.ECR_REGISTRY }}/node-microservices-identity_service:latest
+
+      # Build & Push Post Service
+      - name: Build and Push Docker Image (Post Service)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./post-service
+          push: true
+          tags: |
+            ${{ env.ECR_REGISTRY }}/node-microservices-post_service:${{ github.sha }}
+            ${{ env.ECR_REGISTRY }}/node-microservices-post_service:latest
+
+      # Build & Push Search Service
+      - name: Build and Push Docker Image (Search Service)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./search-service
+          push: true
+          tags: |
+            ${{ env.ECR_REGISTRY }}/node-microservices-search_service:${{ github.sha }}
+            ${{ env.ECR_REGISTRY }}/node-microservices-search_service:latest
+
+      # Build & Push Media Service
+      - name: Build and Push Docker Image (Media Service)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./media-service
+          push: true
+          tags: |
+            ${{ env.ECR_REGISTRY }}/node-microservices-media_service:${{ github.sha }}
+            ${{ env.ECR_REGISTRY }}/node-microservices-media_service:latest
